terraform/modules/k8s/elastic/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: ${namespace}
  annotations:
    cert-manager.io/cluster-issuer: "${cert_manager_issuer}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns.alpha.kubernetes.io/target: "ingress.${cluster_domain}"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kibana.${cluster_domain}
      secretName: kibana-tls
  rules:
    - host: kibana.${cluster_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
